--- a/docs/assets/i18n/de.json
+++ b/docs/assets/i18n/de.json
@@ -6,6 +6,18 @@
   "NODES": "Knoten",
   "EDGES": "Kanten",
   "LOST": "Hast du dich verirrt? Hier geht's zur Startseite!",
+  "AUTH_TITLE": "Mit NDEx verbinden",
+  "AUTH_HINT": "Melde dich mit deinem NDEx Account an, um private Netzwerke zu importieren oder bearbeitete Netzwerke nach NDEx hochzuladen. Wir löschen Deine Login-Informationen, sobald Du den Browser schließt.",
+  "AUTH_TT_OFFLINE": "Du bist nicht mit NDEx verbunden",
+  "AUTH_TT_ONLINE": "Du bist mit NDEx verbunden",
+  "AUTH_OFFLINE_PLACEHOLDER_NAME": "Account-Name",
+  "AUTH_OFFLINE_PLACEHOLDER_PW": "Passwort",
+  "AUTH_OFFLINE_BTN": "Einloggen",
+  "AUTH_ONLINE_AS": "Deine Daten wurden hinterlegt! Dein Account-Name ist: ",
+  "AUTH_ONLINE_BTN": "Ausloggen",
+  "AUTH_ALERT_EMPTY": "Weder Account-Name noch Passwort dürfen leer sein!",
+  "AUTH_ALERT_LOGGED_OUT": "Du wurdest erfolgreich ausgeloggt!",
+  "AUTH_ALERT_LOGIN_FAILURE": "Deine Login-Daten scheinen nicht zu stimmen! Achte auf Tippfehler und versuch es nochmal.",
   "NAV_MANAGE": "Verwalten",
   "NAV_EDIT": "Bearbeiten",
   "NAV_COMPARE": "Vergleichen",
@@ -18,15 +30,18 @@
   "MAIN_INFO_DOCUMENTATION_DESCRIPTION": "Die Dokumentation zu dieser Anwendung ist als separate .zip-Datei im Release-Commit angehängt. Die dort enthaltene <code>index.html</code> kann direkt ausgeführt werden.",
   "MAIN_INFO_STEPS_TITLE": "Erste Schritte",
   "MAIN_INFO_STEPS_DESCRIPTION": "Wenn Du NDExEdit noch nie verwendet hast, hier ein paar Tipps:",
-  "MAIN_INFO_STEPS_STEP_1": "Suche auf der NDExBIO Website ein Netzwerk, was du optisch anpassen möchtest",
-  "MAIN_INFO_STEPS_STEP_2": "Kopiere die URL oder die UUID zum Netzwerk ins Textfeld im Bereich \"Verwalten\" oder wähle eine .cx Datei von deinem PC aus",
-  "MAIN_INFO_STEPS_STEP_3": "Klicke auf das (i) neben dem Netzwerknamen und lass dir alle Informationen zum Netzwerk anzeigen",
-  "MAIN_INFO_STEPS_STEP_4": "Mit Klick auf \"Bearbeiten\" kannst du anpassen, wie der Graph aussieht",
-  "MAIN_INFO_STEPS_STEP_5": "Den veränderten Graphen kannst du als .cx Datei runterladen",
+  "MAIN_INFO_STEPS_STEP_1": "Wähle den \"NDEx durchsuchen\" Tab und gib einen Suchbegriff ein.",
+  "MAIN_INFO_STEPS_STEP_2": "Lade ein Netzwerk mit Klick auf den grünen Button herunter. Wenn das Netzwerk zu viele Knoten oder Kanten hat, kann es nicht heruntergeladen werden.",
+  "MAIN_INFO_STEPS_STEP_3": "Sobald das Netzwerk in der Liste der verfügbaren Netzwerke auftaucht, klicke auf den Pinsel-Button, um das Netzwerk anzuzeigen.",
+  "MAIN_INFO_STEPS_STEP_4": "Im ersten Menü-Tab kannst du Informationen über dieses Netzwerk einsehen. Der zweite Tab enthält alle Visualisierungs-Details für dieses Netzwerk.",
+  "MAIN_INFO_STEPS_STEP_5": "Beim Anpassen der Netzwerk-Visualisierung hast du freie Hand.",
+  "MAIN_INFO_STEPS_STEP_6": "Im Menü-Tab drei kannst du eine Download-Möglichkeit auswählen, um das veränderte Netzwerk zu speichern. Wenn du deine NDEx-Account-Informationen hinterlegt hast, kannst du es direkt in deinen Account hochladen!",
   "MAIN_INFO_TT_FLIP": "Haupt- und Seitenansicht tauschen",
   "MAIN_INFO_LAYOUT_LANG_TITLE": "Seitenverhältnis & Sprache",
   "MAIN_INFO_LAYOUT_DESCRIPTION": "Um das Seitenverhältnis der Anwendung zu manipulieren, sind in der grauen Leiste Buttons versteckt.",
-  "MAIN_INFO_LANG_DESCRIPTION": "Mit den Buttons DE und EN lässt sich die Sprache der Webseite auf jeweils Englisch bzw. Deutsch setzen.",
+  "MAIN_INFO_LANG_DESCRIPTION": "In der Navigationsleiste befindet sich ein Dropdown-Menü, mit dem zwischen den Sprachen Englisch und Deutsch gewechselt werden kann.",
+  "MAIN_INFO_NDEX_TITLE": "NDEx Account",
+  "MAIN_INFO_NDEX_DESCRIPTION": "Mit dem Nutzer-Icon in der Seitenleiste kannst Du dich mit deinem NDEx Account verbinden. Dadurch kannst du beispielsweise deine privaten Netzwerke direkt in NDExEdit laden oder ein bearbeitetes Netzwerk in deinen NDEx Account hochladen.",
   "MAIN_INFO_LAYOUT_STEP_1": "Klick auf einen der Pfeile ändert das Seitenverhältnis",
   "MAIN_INFO_LAYOUT_STEP_2": "Klick auf Zurücksetzen stellt das Standard-Seitenverhältnis wieder her",
   "MAIN_INFO_LAYOUT_STEP_3": "Klick auf den gelben Button vertauscht die Haupt- und Seitenansicht",
@@ -60,7 +75,7 @@
   "MAIN_GRAPH_BTN_FIT": "Größe anpassen",
   "MAIN_GRAPH_BTN_LAYOUT": "Layout anwenden",
   "MAIN_GRAPH_BTN_SAVE": "Koordinaten sichern",
-  "SIDEBAR_MANAGE_TITLE": "Verfügbare Netzwerke",
+  "SIDEBAR_MANAGE_TITLE": "Geladene Netzwerke",
   "SIDEBAR_MANAGE_NW_NAME": "Netzwerkname",
   "SIDEBAR_MANAGE_TT_CLIPBOARD": "UUID kopieren",
   "SIDEBAR_MANAGE_CLIPBOARD_SUCCESSFUL": "Kopiert!",
@@ -86,6 +101,38 @@
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_EDGES": "#Kanten",
   "SIDEBAR_MANAGE_FILE_INVALID": "Datei ungültig!",
   "SIDEBAR_MANAGE_FILE_INVALID_TEXT": "Du hast versucht eine Datei von NDEx zu importieren, die nicht existiert, oder die NDEx Server sind derzeit nicht erreichbar. Prüfe, ob du NDEx im Browser erreichst und kontrolliere deine Eingabe.",
+  "SIDEBAR_MANAGE_GET_TITLE": "Netzwerke hinzufügen",
+  "SIDEBAR_MANAGE_BROWSE_FILE_LABEL": "Durchsuche NDEx nach einem interessanten Netzwerk",
+  "SIDEBAR_MANAGE_BROWSE_PLACEHOLDER": "Suchwort ...",
+  "SIDEBAR_MANAGE_BROWSE_BTN_LABEL": "Suchen",
+  "SIDEBAR_MANAGE_BROWSE_BTN_TT": "Suchanfrage abschicken",
+  "SIDEBAR_MANAGE_BROWSE_HINT": "Standardmäßig durchsuchen wir die öffentlich erreichbaren Netzwerke auf NDEx nach Treffern. Wenn Du mit deinem NDEx Account verbunden bist, kannst du auch deine persönlichen Netzwerke, die auf NDEx liegen, durchsuchen.",
+  "SIDEBAR_MANAGE_BROWSE_PRIVATE": "Private Netzwerke",
+  "SIDEBAR_MANAGE_BROWSE_PUBLIC": "Öffentliche Netzwerke",
+  "SIDEBAR_MANAGE_BROWSE_NEEDS_LOGIN": "Du bist nicht verbunden",
+  "SIDEBAR_MANAGE_BROWSE_NEEDS_LOGIN_TEXT": "Um deine privaten Netzwerke zu durchsuchen, musst du dich einloggen. Dazu klickst du auf das Benutzer-Icon oben und gibst deine NDEx-Zugangsdaten ein.",
+  "SIDEBAR_MANAGE_BROWSE_ALL_BTN_LABEL": "Alle Netzwerke anzeigen",
+  "SIDEBAR_MANAGE_BROWSE_ALL_TT": "Listet alle Netzwerke auf, die in deinem Account liegen",
+  "SIDEBAR_MANAGE_TT_PREVIEW": "Beschreibung anzeigen",
+  "SIDEBAR_MANAGE_TT_DOWNLOAD_POSSIBLE": "Dieses Netzwerk importieren",
+  "SIDEBAR_MANAGE_TT_DOWNLOAD_IMPOSSIBLE": "Dieses Netzwerk enthält zu viele Knoten oder Kanten, um importieren zu werden.",
+  "SIDEBAR_MANAGE_FILE_EMPTY_SEARCH_ERROR": "Fehlender Suchbegriff",
+  "SIDEBAR_MANAGE_FILE_EMPTY_SEARCH_LABEL": "Bitte gib einen Suchbegriff ein, um die Suche einzugrenzen. Du kannst beispielsweise auch nach einem Autor suchen.",
+  "SIDEBAR_MANAGE_FILE_EMPTY_RESULT_ERROR": "Anfrage nicht erfolgreich",
+  "SIDEBAR_MANAGE_FILE_EMPTY_RESULT_LABEL": "Deine Anfrage hat keine Netzwerke zurückgegeben. Prüfe deine Anfrage auf Tippfehler oder versuche es mit Synonymen.",
+  "SIDEBAR_MANAGE_BROWSE_TABLE_NAME": "Netzwerkname",
+  "SIDEBAR_MANAGE_BROWSE_TABLE_OWNER": "Besitzer",
+  "SIDEBAR_MANAGE_BROWSE_TABLE_COUNT_NODES": "Anzahl Knoten",
+  "SIDEBAR_MANAGE_BROWSE_TABLE_COUNT_EDGES": "Anzahl Kanten",
+  "SIDEBAR_MANAGE_VISIBILITY_PRIVATE": "Netzwerke aus deinem NDEx-Account werden durchsucht",
+  "SIDEBAR_MANAGE_VISIBILITY_PRIVATE_OFFLINE": "Logge dich ein, um deine Account-Netzwerke zu durchsuchen",
+  "SIDEBAR_MANAGE_VISIBILITY_PUBLIC": "Öffentlich erreichbare Netzwerke werden durchsucht",
+  "SIDEBAR_MANAGE_TT_IMPORT_UUID": "Lade ein Netzwerk über seine UUID aus NDEx",
+  "SIDEBAR_MANAGE_TT_IMPORT_BROWSE": "Durchsuche NDEx nach einem Netzwerk",
+  "SIDEBAR_MANAGE_TT_IMPORT_LOCAL": "Importiere ein lokales Netzwerk",
+  "SIDEBAR_MANAGE_IMPORT_UUID": "Laden über UUID",
+  "SIDEBAR_MANAGE_IMPORT_BROWSE": "NDEx durchsuchen",
+  "SIDEBAR_MANAGE_IMPORT_LOCAL": "Lokale CX-Datei laden",
   "SIDEBAR_COLLAPSE": "Aus- / einblenden",
   "SIDEBAR_EDIT_DESCRIPTION": "Netzwerk-Informationen",
   "SIDEBAR_EDIT_ATTRIBUTES": "Knoten- und Kanten-Attribute",
@@ -234,6 +281,8 @@
   "SIDEBAR_EDIT_MAPPING_HARD_RESET_TEXT_NODE": "Wir behalten das Mapping für Knoten-Beschriftungen (sofern es existiert). Wenn du auch das löschen möchtest, kannst du das manuell im Tab 'durchreichende Mappings' machen.",
   "SIDEBAR_EDIT_TT_RESET_CONFIRM": "Ok, zurücksetzen!",
   "SIDEBAR_EDIT_TT_RESET_ABORT": "Abbrechen",
+  "SIDEBAR_EDIT_MODE_EDIT": "Du bist im Bearbeiten-Modus! Wende deine Änderungen an oder verwerfe sie, um in den Ansichts-Modus zurückzukehren.",
+  "SIDEBAR_EDIT_MODE_FLASH": "Du bist im Vorschau-Modus! Klicke erneut auf den Zauberstab, um zurück in den Bearbeiten-Modus zu gelangen.",
   "MODAL_FONT_FACE_FORM": "Schriftart definieren",
   "MODAL_FONT_FACE_FORM_DESCRIPTION": "Schriftart und -größe, gegebenenfalls auch Schriftstil, können für das untenstehende Mapping über dieses Formular definiert werden. Zum Abbrechen das Fenster schließen.",
   "MAIN_MAPPINGS_TH_COL": "Spalte mit Daten",
@@ -323,9 +372,37 @@
   "SIDEBAR_IMAGE_HEIGHT": "Bildhöhe",
   "SIDEBAR_IMAGE_SCALE": "Bild skalieren",
   "SIDEBAR_IMAGE_SCALE_HINT": "Das Bild kann bis zu verzehnfacht werden",
-  "SIDEBAR_IMAGE_SELECT_TYPE": "Herunterladen als",
-  "SIDEBAR_IMAGE_BTN_DOWNLOAD": "Herunterladen",
-  "SIDEBAR_IMAGE_GENERAL": "Als Datentyp kannst du PNG, JPEG oder CX wählen. Für die Bildformate kannst du weitere Einstellungen vornehmen. Möchtest du das Netzwerk anschließend auf NDEx laden, brauchst du das CX-Format.",
+  "SIDEBAR_IMAGE_SELECT_TYPE": "Format zum Herunterladen: ",
+  "SIDEBAR_IMAGE_SELECT_TYPE_OFFLINE": "Bitte einloggen",
+  "SIDEBAR_IMAGE_BTN_DOWNLOAD": "Exportieren",
+  "SIDEBAR_IMAGE_BTN_LABEL_DOWNLOAD": "Herunterladen als ",
+  "SIDEBAR_IMAGE_BTN_LABEL_UPLOAD": "Hochladen nach ",
+  "SIDEBAR_IMAGE_GENERAL": "Als Datentyp kannst du PNG, JPEG oder CX wählen. Für die Bildformate kannst du weitere Einstellungen vornehmen. Zudem kannst du das Netzwerk direkt in deinen NDEx-Account laden, wenn du mit NDEx verbunden bist. Mit Klick auf das Nutzer-Icon oben kannst du deinen Verbindungsstatus prüfen.",
+  "SIDEBAR_IMAGE_NDEX_HINT": "Um dieses Netzwerk nach NDEx hochzuladen, musst du dich entscheiden, ob du ein bestehendes Netzwerk aus deinem Account überschreiben möchtest oder in deinem Account ein neues Netzwerk anlegen möchtest.",
+  "SIDEBAR_IMAGE_NDEX_OFFLINE": "Nicht verbunden",
+  "SIDEBAR_IMAGE_NDEX_OFFLINE_TEXT": "Wir können dein Netzwerk nur dann in deinen NDEx-Account hochladen, wenn du mit NDEx verbunden bist. Um das zu tun, klicke auf das Nutzer-Icon oben, um deine Login-Daten einzugeben.",
+  "SIDEBAR_IMAGE_NDEX_NEW_PUBLIC": "Netzwerk wird auf NDEx öffentlich zu finden sein",
+  "SIDEBAR_IMAGE_NDEX_NEW_PRIVATE": "Netzwerk wird nur für dich verfügbar sein",
+  "SIDEBAR_IMAGE_NDEX_NEW": "Ein neues Netzwerk in deinem Account anlegen",
+  "SIDEBAR_IMAGE_NDEX_OVERRIDE": "Ein Netzwerk aus deinem Account auswählen und überschreiben",
+  "SIDEBAR_IMAGE_NEW_SUCCESS": "Hochladen erfolgreich",
+  "SIDEBAR_IMAGE_NEW_SUCCESS_TEXT": "Ein neues Netzwerk wurde in deinem Account erstellt! Du kannst es über untenstehende URL erreichen.",
+  "SIDEBAR_IMAGE_OVERRIDE_SUCCESS": "Überschreiben erfolgreich",
+  "SIDEBAR_IMAGE_OVERRIDE_SUCCESS_TEXT": "Das ausgewählte Netzwerk wurde überschrieben!",
+  "SIDEBAR_IMAGE_NEW_FAILURE": "Hochladen nicht erfolgreich",
+  "SIDEBAR_IMAGE_NEW_FAILURE_TEXT": "Beim Erstellen deines Netzwerks ist leider ein Fehler passiert!",
+  "SIDEBAR_IMAGE_OVERRIDE_FAILURE": "Überschreiben nicht erfolgreich",
+  "SIDEBAR_IMAGE_OVERRIDE_FAILURE_TEXT": "Beim Überschreiben deines Netzwerks ist leider ein Fehler passiert!",
+  "SIDEBAR_IMAGE_NDEX_HEADLINE_NEW": "Neues Netzwerk erstellen",
+  "SIDEBAR_IMAGE_NDEX_HEADLINE_OVERRIDE": "Bestehendes Netzwerk überschreiben",
+  "SIDEBAR_IMAGE_BROWSE_PERMISSION": "Berechtigung",
+  "SIDEBAR_IMAGE_PERMISSION_INVALID": "Du hast keine Schreibrechte",
+  "SIDEBAR_IMAGE_PERMISSION_VALID": "Du hast Schreibrechte. Klicke, um dieses Netzwerk fürs Überschreiben zu markieren.",
+  "SIDEBAR_IMAGE_PERMISSION_UNCLEAR": "Klicke, um zur prüfen ob du Schreibrechte hast",
+  "SIDEBAR_IMAGE_NDEX_OVERRIDE_HINT": "Du kannst ein bestehendes Netzwerk direkt aus NDExEdit heraus überschreiben. Davor müssen wir allerdings sichergehen, dass du Schreibrechte für dieses Netzwerk hast. Alle Netzwerke, zu denen du Zugang hast, siehst du in der untenstehenden Liste. Wähle eins aus und prüfe auf Schreibrechte, indem du auf das Fragezeichen klickst.",
+  "SIDEBAR_IMAGE_NDEX_OVERRIDE_EMPTY": "Kein Netzwerk ausgewählt",
+  "SIDEBAR_IMAGE_NDEX_OVERRIDE_NOT_EMPTY": "Wenn du dieses Netzwerke wirklich überschreiben möchtest, klicke den grünen Export-Button oben.",
+  "SIDEBAR_IMAGE_NDEX_REFRESH": "Liste aktualisieren",
   "CHART_HISTO_INCREASE": "Bin hinzufügen",
   "CHART_HISTO_DECREASE": "Bin entfernen",
   "CHART_HISTO_RESET": "Bins zurücksetzen auf ",
