--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,6 +6,18 @@
   "NODES": "Nodes",
   "EDGES": "Edges",
   "LOST": "Are you lost? Return to main page!",
+  "AUTH_TITLE": "Connect to NDEx",
+  "AUTH_HINT": "To access your private networks on NDEx or to push an edited network to your NDEx account you will need to login. We delete your login information as soon as you close the browser.",
+  "AUTH_TT_OFFLINE": "You are not connected to NDEx",
+  "AUTH_TT_ONLINE": "You are connected to NDEx",
+  "AUTH_OFFLINE_PLACEHOLDER_NAME": "Account name",
+  "AUTH_OFFLINE_PLACEHOLDER_PW": "Password",
+  "AUTH_OFFLINE_BTN": "Login",
+  "AUTH_ONLINE_AS": "You are connected to NDEx! Your account name is: ",
+  "AUTH_ONLINE_BTN": "Logout",
+  "AUTH_ALERT_EMPTY": "Username and password are required!",
+  "AUTH_ALERT_LOGGED_OUT": "We logged you out!",
+  "AUTH_ALERT_LOGIN_FAILURE": "Your credentials could not be verified! Check for typos and try again.",
   "NAV_MANAGE": "Manage",
   "NAV_EDIT": "Edit",
   "NAV_COMPARE": "Compare",
@@ -18,15 +30,18 @@
   "MAIN_INFO_DOCUMENTATION_DESCRIPTION": "The documentation to this application is available as a separate .zip file delivered with the release. You can run the <code>index.html</code> to read up on the code.",
   "MAIN_INFO_STEPS_TITLE": "First steps",
   "MAIN_INFO_STEPS_DESCRIPTION": "If you never worked with NDExEdit before, here are a few first steps you might want to try out:",
-  "MAIN_INFO_STEPS_STEP_1": "Visit the NDExBIO Website and select a network you would like to edit visually",
-  "MAIN_INFO_STEPS_STEP_2": "Enter this network's URL or UUID into the downloader under \"Manage\" or select a local .cx file",
-  "MAIN_INFO_STEPS_STEP_3": "Inspect the information displayed to this specific network by clicking on the i-Icon right next to the networks name",
-  "MAIN_INFO_STEPS_STEP_4": "Click on \"Edit\" to manipulate how the graph is displayed",
-  "MAIN_INFO_STEPS_STEP_5": "You can download the adapted graph as .cx file",
+  "MAIN_INFO_STEPS_STEP_1": "Select the \"Browse NDEx\" tab and enter a search term",
+  "MAIN_INFO_STEPS_STEP_2": "Choose a network that sounds interesting to you and click the download button. If a network has too many nodes or edges it cannot be downloaded.",
+  "MAIN_INFO_STEPS_STEP_3": "As soon as the network appears in the list of available networks above, click the brush-button to render the preview.",
+  "MAIN_INFO_STEPS_STEP_4": "Explore the information this network contains in the first tab. The second tab contains all visualization details for this network.",
+  "MAIN_INFO_STEPS_STEP_5": "Feel free to change the network's visualization.",
+  "MAIN_INFO_STEPS_STEP_6": "In tab three you can choose an option to save the edited network. If you entered your NDEx account info in the sidebar, you can upload this network directly to your account!",
   "MAIN_INFO_TT_FLIP": "Switch main and side view",
   "MAIN_INFO_LAYOUT_LANG_TITLE": "Page layout & language settings",
   "MAIN_INFO_LAYOUT_DESCRIPTION": "To modify the proportion of main view and sidebar there are some buttons hidden within the grey vertical bar:",
-  "MAIN_INFO_LANG_DESCRIPTION": "Use the buttons DE or EN to toggle German or English language.",
+  "MAIN_INFO_LANG_DESCRIPTION": "At top of the sidebar you can find a dropdown to choose German or English as language.",
+  "MAIN_INFO_NDEX_TITLE": "NDEx account",
+  "MAIN_INFO_NDEX_DESCRIPTION": "When clicking the user icon in the sidebar you can access your NDEx account. That allows you to import private networks from your account and upload an edited network directly to your NDEx account.",
   "MAIN_INFO_LAYOUT_STEP_1": "Arrow buttons change the proportion",
   "MAIN_INFO_LAYOUT_STEP_2": "Reset button sets the proportion back to default",
   "MAIN_INFO_LAYOUT_STEP_3": "Yellow button switches main view and sidebar",
@@ -60,7 +75,7 @@
   "MAIN_GRAPH_BTN_FIT": "Fit graph",
   "MAIN_GRAPH_BTN_LAYOUT": "Layout graph",
   "MAIN_GRAPH_BTN_SAVE": "Save coordinates",
-  "SIDEBAR_MANAGE_TITLE": "Available networks",
+  "SIDEBAR_MANAGE_TITLE": "Loaded networks",
   "SIDEBAR_MANAGE_NW_NAME": "Network name",
   "SIDEBAR_MANAGE_TT_CLIPBOARD": "Copy this UUID",
   "SIDEBAR_MANAGE_CLIPBOARD_SUCCESSFUL": "Copied!",
@@ -86,6 +101,38 @@
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_EDGES": "#Edges",
   "SIDEBAR_MANAGE_FILE_INVALID": "Invalid file!",
   "SIDEBAR_MANAGE_FILE_INVALID_TEXT": "You either tried to load a file from NDEx that does not exist, or the NDEx servers are having issues. Check if you reach NDEx via Browser and check your input for typos.",
+  "SIDEBAR_MANAGE_GET_TITLE": "Import networks",
+  "SIDEBAR_MANAGE_BROWSE_FILE_LABEL": "Browse NDEx to find an interesting network",
+  "SIDEBAR_MANAGE_BROWSE_PLACEHOLDER": "Keyword ...",
+  "SIDEBAR_MANAGE_BROWSE_BTN_LABEL": "Search",
+  "SIDEBAR_MANAGE_BROWSE_BTN_TT": "Submit this search",
+  "SIDEBAR_MANAGE_BROWSE_HINT": "By default we check the publicly available networks on NDEx for any matches. But if you are connected with your NDEx credentials, you can choose to browse your personal networks.",
+  "SIDEBAR_MANAGE_BROWSE_PRIVATE": "Private networks",
+  "SIDEBAR_MANAGE_BROWSE_PUBLIC": "Public networks",
+  "SIDEBAR_MANAGE_BROWSE_NEEDS_LOGIN": "You are offline",
+  "SIDEBAR_MANAGE_BROWSE_NEEDS_LOGIN_TEXT": "To browse private networks you have to login first. To do that, click the user icon at the top and enter your NDEx credentials.",
+  "SIDEBAR_MANAGE_BROWSE_ALL_BTN_LABEL": "Browse",
+  "SIDEBAR_MANAGE_BROWSE_ALL_TT": "Fetches all networks linked to your account",
+  "SIDEBAR_MANAGE_TT_PREVIEW": "Show this network's description",
+  "SIDEBAR_MANAGE_TT_DOWNLOAD_POSSIBLE": "Click to import this network",
+  "SIDEBAR_MANAGE_TT_DOWNLOAD_IMPOSSIBLE": "This network cannot be downloaded, because it contains too many elements.",
+  "SIDEBAR_MANAGE_FILE_EMPTY_SEARCH_ERROR": "Missing search term",
+  "SIDEBAR_MANAGE_FILE_EMPTY_SEARCH_LABEL": "To specify your request, please enter a search term. You can also look for an author.",
+  "SIDEBAR_MANAGE_FILE_EMPTY_RESULT_ERROR": "Unsuccessful request",
+  "SIDEBAR_MANAGE_FILE_EMPTY_RESULT_LABEL": "The query did not return any networks. Check for typos or try synonyms.",
+  "SIDEBAR_MANAGE_BROWSE_TABLE_NAME": "Network name",
+  "SIDEBAR_MANAGE_BROWSE_TABLE_OWNER": "Owner",
+  "SIDEBAR_MANAGE_BROWSE_TABLE_COUNT_NODES": "#Nodes",
+  "SIDEBAR_MANAGE_BROWSE_TABLE_COUNT_EDGES": "#Edges",
+  "SIDEBAR_MANAGE_VISIBILITY_PRIVATE": "Networks stored privately in your account will be searched",
+  "SIDEBAR_MANAGE_VISIBILITY_PRIVATE_OFFLINE": "You need to login to access your account networks",
+  "SIDEBAR_MANAGE_VISIBILITY_PUBLIC": "Publicly available networks will be searched",
+  "SIDEBAR_MANAGE_TT_IMPORT_UUID": "Import a network via NDEx UUID",
+  "SIDEBAR_MANAGE_TT_IMPORT_BROWSE": "Browse NDEx to find a network",
+  "SIDEBAR_MANAGE_TT_IMPORT_LOCAL": "Import a local network",
+  "SIDEBAR_MANAGE_IMPORT_UUID": "Download by UUID",
+  "SIDEBAR_MANAGE_IMPORT_BROWSE": "Browse NDEx",
+  "SIDEBAR_MANAGE_IMPORT_LOCAL": "Load local CX",
   "SIDEBAR_COLLAPSE": "Hide / show",
   "SIDEBAR_EDIT_DESCRIPTION": "Network information",
   "SIDEBAR_EDIT_ATTRIBUTES": "Node and edge attributes",
@@ -234,6 +281,8 @@
   "SIDEBAR_EDIT_MAPPING_HARD_RESET_TEXT_NODE": "We keep the passthrough mapping for node labels (if it exists). You can still remove it manually in the passthrough tab.",
   "SIDEBAR_EDIT_TT_RESET_CONFIRM": "Reset!",
   "SIDEBAR_EDIT_TT_RESET_ABORT": "Abort",
+  "SIDEBAR_EDIT_MODE_EDIT": "You are in edit mode! Accept or discard your changes to return to inspection mode.",
+  "SIDEBAR_EDIT_MODE_FLASH": "You are in flash mode! Click the wand icon again to return to edit mode.",
   "MODAL_FONT_FACE_FORM": "Define font face property",
   "MODAL_FONT_FACE_FORM_DESCRIPTION": "Adjust font face and size, even font style for specific fonts. The mapping is displayed below. To abort close this window without hitting submit.",
   "MAIN_MAPPINGS_TH_COL": "Data column",
@@ -323,9 +372,37 @@
   "SIDEBAR_IMAGE_HEIGHT": "Height",
   "SIDEBAR_IMAGE_SCALE": "Scale image",
   "SIDEBAR_IMAGE_SCALE_HINT": "You can increase the image up to 10 times",
-  "SIDEBAR_IMAGE_SELECT_TYPE": "Download as",
-  "SIDEBAR_IMAGE_BTN_DOWNLOAD": "Download",
-  "SIDEBAR_IMAGE_GENERAL": "You can select either PNG, JPEG or CX as type of your download file. You can tweak several settings for your image download. If you plan to upload your network to NDEx you'll need the CX format.",
+  "SIDEBAR_IMAGE_SELECT_TYPE": "Download option: ",
+  "SIDEBAR_IMAGE_SELECT_TYPE_OFFLINE": "Login needed",
+  "SIDEBAR_IMAGE_BTN_DOWNLOAD": "Export",
+  "SIDEBAR_IMAGE_BTN_LABEL_DOWNLOAD": "Download as ",
+  "SIDEBAR_IMAGE_BTN_LABEL_UPLOAD": "Upload to ",
+  "SIDEBAR_IMAGE_GENERAL": "You can select either PNG, JPEG or CX as type of your download file. You can tweak several settings for your image download. Furthermore, you can push your network directly to your NDEx account, if you are connected to NDEx. Check the connection status by clicking the user icon at the top.",
+  "SIDEBAR_IMAGE_NDEX_HINT": "To push this network to NDEx you have to decide if you want to override an existing network or create a new network in your account.",
+  "SIDEBAR_IMAGE_NDEX_OFFLINE": "Not connected",
+  "SIDEBAR_IMAGE_NDEX_OFFLINE_TEXT": "Directly uploading a network to your NDEx account can only be accomplished if you are connected to NDEx. Click the user icon in the top and enter your credentials to do that.",
+  "SIDEBAR_IMAGE_NDEX_NEW_PUBLIC": "Network will be publicly accessible",
+  "SIDEBAR_IMAGE_NDEX_NEW_PRIVATE": "Network will be accessible only to you",
+  "SIDEBAR_IMAGE_NDEX_NEW": "Create a new network in your account",
+  "SIDEBAR_IMAGE_NDEX_OVERRIDE": "Select a network from your account to override",
+  "SIDEBAR_IMAGE_NEW_SUCCESS": "Upload successful",
+  "SIDEBAR_IMAGE_NEW_SUCCESS_TEXT": "A new network has been created in your account! You can find the URL to your network below.",
+  "SIDEBAR_IMAGE_OVERRIDE_SUCCESS": "Override successful",
+  "SIDEBAR_IMAGE_OVERRIDE_SUCCESS_TEXT": "The selected network has been replaced!",
+  "SIDEBAR_IMAGE_NEW_FAILURE": "Upload not successful",
+  "SIDEBAR_IMAGE_NEW_FAILURE_TEXT": "Something went wrong, when creating your network!",
+  "SIDEBAR_IMAGE_OVERRIDE_FAILURE": "Override not successful",
+  "SIDEBAR_IMAGE_OVERRIDE_FAILURE_TEXT": "Something went wrong, when overriding your network!",
+  "SIDEBAR_IMAGE_NDEX_HEADLINE_NEW": "Create a new network",
+  "SIDEBAR_IMAGE_NDEX_HEADLINE_OVERRIDE": "Override an existing network",
+  "SIDEBAR_IMAGE_BROWSE_PERMISSION": "Permission",
+  "SIDEBAR_IMAGE_PERMISSION_INVALID": "You do not have write permission",
+  "SIDEBAR_IMAGE_PERMISSION_VALID": "You have write permission. Click to mark this network for override.",
+  "SIDEBAR_IMAGE_PERMISSION_UNCLEAR": "Click to check if you have write permission",
+  "SIDEBAR_IMAGE_NDEX_OVERRIDE_HINT": "You can update an existing network from NDExEdit. To do so, we have to make sure, you actually have write permissions for this network. You can find all networks you have access to in the list below. Choose one and check for write permission by clicking the question mark button.",
+  "SIDEBAR_IMAGE_NDEX_OVERRIDE_EMPTY": "No network selected to override",
+  "SIDEBAR_IMAGE_NDEX_OVERRIDE_NOT_EMPTY": "If you really want to override this network, click the green button above!",
+  "SIDEBAR_IMAGE_NDEX_REFRESH": "Refresh list",
   "CHART_HISTO_INCREASE": "Add bin",
   "CHART_HISTO_DECREASE": "Remove bin",
   "CHART_HISTO_RESET": "Reset bins to ",
